k8s/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-server
  template:
    metadata:
      labels:
        app: ping-pong-server
    spec:
      containers:
        - name: ping-pong-server
          image: ghcr.io/huseyinbabal/ping-pong-server:v1.0.15  # Replace with your Docker image details
          ports:
            - containerPort: 50051  # Replace with the gRPC server port of your Go application
